--- a/website/css/incidents.css
+++ b/website/css/incidents.css
@@ -23,3 +23,10 @@
     margin-left: 2%;
     width: 50%;
 }
+
+#data_table_no_data_selected{
+    text-align: center;
+    margin-right: 15%;
+    margin-top: 10%;
+    color: #C2C2C2;
+}
