--- a/website/bootstrap/scss/_variables.scss
+++ b/website/bootstrap/scss/_variables.scss
@@ -44,6 +44,8 @@ $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
+$custom_primary: #5A908A;
+$custom_secondary: #E7B692;
 
 $colors: () !default;
 $colors: map-merge((
@@ -62,8 +64,8 @@ $colors: map-merge((
   "gray-dark":  $gray-800
 ), $colors);
 
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
+$primary:       $custom_primary;
+$secondary:     $custom_secondary;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
