--- a/website/css/index.css
+++ b/website/css/index.css
@@ -41,4 +41,17 @@
 #search_reports{
     margin-bottom: 10px;
 }
+#date_search_month_box{
+    padding-top: 10px;
+    padding-bottom: 10px;
 
+    margin: auto;
+}
+#date_search_year_box{
+
+    margin: auto;
+}
+#date_search_day_box{
+
+    margin: auto;
+}
