--- a/website/css/incidents.css
+++ b/website/css/incidents.css
@@ -29,3 +29,22 @@
     margin-top: 10%;
     color: #C2C2C2;
 }
+
+#date_search_month_box{
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    margin: auto;
+}
+#date_search_year_box{
+
+    margin: auto;
+}
+#date_search_day_box{
+
+    margin: auto;
+}
+
+#search_reports{
+    margin-bottom: 10px;
+}
