--- a/website/css/reports.css
+++ b/website/css/reports.css
@@ -1,10 +1,12 @@
 #reports_menu{
     overflow: scroll;
-    max-height: 500px;
+    height: 93vh;
+
 }
 
 #col4{
-    margin-top: 3%;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 #col8{
