--- a/website/bootstrap/css/bootstrap.css
+++ b/website/bootstrap/css/bootstrap.css
@@ -18,8 +18,8 @@
   --white: #fff;
   --gray: #868e96;
   --gray-dark: #343a40;
-  --primary: #FF5600;
-  --secondary: #ced4da;
+  --primary: #D65D28;
+  --secondary: #D3D3D3;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -184,12 +184,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #FF5600;
+  color: #D65D28;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #b33c00;
+    color: #96411c;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -1546,24 +1546,24 @@ pre {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #ffd0b8; }
+  background-color: #f4d2c3; }
 
 .table-hover .table-primary:hover {
-  background-color: #ffbf9f; }
+  background-color: #f0c2ad; }
   .table-hover .table-primary:hover > td,
   .table-hover .table-primary:hover > th {
-    background-color: #ffbf9f; }
+    background-color: #f0c2ad; }
 
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-  background-color: #f1f3f5; }
+  background-color: #f3f3f3; }
 
 .table-hover .table-secondary:hover {
-  background-color: #e2e6ea; }
+  background-color: #e6e6e6; }
   .table-hover .table-secondary:hover > td,
   .table-hover .table-secondary:hover > th {
-    background-color: #e2e6ea; }
+    background-color: #e6e6e6; }
 
 .table-success,
 .table-success > th,
@@ -1738,10 +1738,10 @@ pre {
   .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #ffab80;
+    border-color: #ebae93;
     outline: none;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.25);
-    box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.25); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.25);
+    box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.25); }
   .form-control::-webkit-input-placeholder {
     color: #868e96;
     opacity: 1; }
@@ -2117,8 +2117,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.25);
-    box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.25); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.25);
+    box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.25); }
   .btn.disabled, .btn:disabled {
     opacity: .65; }
   .btn:not([disabled]):not(.disabled):active, .btn:not([disabled]):not(.disabled).active {
@@ -2130,47 +2130,47 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #FF5600;
-  border-color: #FF5600; }
+  background-color: #D65D28;
+  border-color: #D65D28; }
   .btn-primary:hover {
     color: #fff;
-    background-color: #d94900;
-    border-color: #cc4500; }
+    background-color: #b64f22;
+    border-color: #ab4a20; }
   .btn-primary:focus, .btn-primary.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.5); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
-    background-color: #FF5600;
-    border-color: #FF5600; }
+    background-color: #D65D28;
+    border-color: #D65D28; }
   .btn-primary:not([disabled]):not(.disabled):active, .btn-primary:not([disabled]):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #cc4500;
-    border-color: #bf4100;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.5); }
+    background-color: #ab4a20;
+    border-color: #a0461e;
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.5); }
 
 .btn-secondary {
   color: #111;
-  background-color: #ced4da;
-  border-color: #ced4da; }
+  background-color: #D3D3D3;
+  border-color: #D3D3D3; }
   .btn-secondary:hover {
     color: #111;
-    background-color: #b8c1ca;
-    border-color: #b1bbc4; }
+    background-color: silver;
+    border-color: #bababa; }
   .btn-secondary:focus, .btn-secondary.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(206, 212, 218, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(206, 212, 218, 0.5); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(211, 211, 211, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(211, 211, 211, 0.5); }
   .btn-secondary.disabled, .btn-secondary:disabled {
-    background-color: #ced4da;
-    border-color: #ced4da; }
+    background-color: #D3D3D3;
+    border-color: #D3D3D3; }
   .btn-secondary:not([disabled]):not(.disabled):active, .btn-secondary:not([disabled]):not(.disabled).active,
   .show > .btn-secondary.dropdown-toggle {
     color: #111;
-    background-color: #b1bbc4;
-    border-color: #aab4bf;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(206, 212, 218, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(206, 212, 218, 0.5); }
+    background-color: #bababa;
+    border-color: #b3b3b3;
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(211, 211, 211, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(211, 211, 211, 0.5); }
 
 .btn-success {
   color: #fff;
@@ -2305,50 +2305,50 @@ fieldset[disabled] a.btn {
     box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5); }
 
 .btn-outline-primary {
-  color: #FF5600;
+  color: #D65D28;
   background-color: transparent;
   background-image: none;
-  border-color: #FF5600; }
+  border-color: #D65D28; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #FF5600;
-    border-color: #FF5600; }
+    background-color: #D65D28;
+    border-color: #D65D28; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.5); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #FF5600;
+    color: #D65D28;
     background-color: transparent; }
   .btn-outline-primary:not([disabled]):not(.disabled):active, .btn-outline-primary:not([disabled]):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #FF5600;
-    border-color: #FF5600;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(255, 86, 0, 0.5); }
+    background-color: #D65D28;
+    border-color: #D65D28;
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(214, 93, 40, 0.5); }
 
 .btn-outline-secondary {
-  color: #ced4da;
+  color: #D3D3D3;
   background-color: transparent;
   background-image: none;
-  border-color: #ced4da; }
+  border-color: #D3D3D3; }
   .btn-outline-secondary:hover {
     color: #fff;
-    background-color: #ced4da;
-    border-color: #ced4da; }
+    background-color: #D3D3D3;
+    border-color: #D3D3D3; }
   .btn-outline-secondary:focus, .btn-outline-secondary.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(206, 212, 218, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(206, 212, 218, 0.5); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(211, 211, 211, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(211, 211, 211, 0.5); }
   .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-    color: #ced4da;
+    color: #D3D3D3;
     background-color: transparent; }
   .btn-outline-secondary:not([disabled]):not(.disabled):active, .btn-outline-secondary:not([disabled]):not(.disabled).active,
   .show > .btn-outline-secondary.dropdown-toggle {
     color: #fff;
-    background-color: #ced4da;
-    border-color: #ced4da;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(206, 212, 218, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(206, 212, 218, 0.5); }
+    background-color: #D3D3D3;
+    border-color: #D3D3D3;
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(211, 211, 211, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(211, 211, 211, 0.5); }
 
 .btn-outline-success {
   color: #28a745;
@@ -2490,10 +2490,10 @@ fieldset[disabled] a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #FF5600;
+  color: #D65D28;
   background-color: transparent; }
   .btn-link:hover {
-    color: #b33c00;
+    color: #96411c;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -2636,7 +2636,7 @@ tbody.collapse.show {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #FF5600; }
+    background-color: #D65D28; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #868e96;
     background-color: transparent; }
@@ -2936,13 +2936,13 @@ tbody.collapse.show {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-indicator {
     color: #fff;
-    background-color: #FF5600; }
+    background-color: #D65D28; }
   .custom-control-input:focus ~ .custom-control-indicator {
-    -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(255, 86, 0, 0.25);
-    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(255, 86, 0, 0.25); }
+    -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(214, 93, 40, 0.25);
+    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(214, 93, 40, 0.25); }
   .custom-control-input:active ~ .custom-control-indicator {
     color: #fff;
-    background-color: #ffccb3; }
+    background-color: #f3cebe; }
   .custom-control-input:disabled ~ .custom-control-indicator {
     background-color: #e9ecef; }
   .custom-control-input:disabled ~ .custom-control-description {
@@ -2972,7 +2972,7 @@ tbody.collapse.show {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-indicator {
-  background-color: #FF5600;
+  background-color: #D65D28;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E"); }
 
 .custom-radio .custom-control-indicator {
@@ -3012,7 +3012,7 @@ tbody.collapse.show {
   -moz-appearance: none;
   appearance: none; }
   .custom-select:focus {
-    border-color: #ffab80;
+    border-color: #ebae93;
     outline: none; }
     .custom-select:focus::-ms-value {
       color: #495057;
@@ -3046,8 +3046,8 @@ tbody.collapse.show {
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-control {
-    -webkit-box-shadow: 0 0 0 0.075rem #fff, 0 0 0 0.2rem #FF5600;
-    box-shadow: 0 0 0 0.075rem #fff, 0 0 0 0.2rem #FF5600; }
+    -webkit-box-shadow: 0 0 0 0.075rem #fff, 0 0 0 0.2rem #D65D28;
+    box-shadow: 0 0 0 0.075rem #fff, 0 0 0 0.2rem #D65D28; }
 
 .custom-file-control {
   position: absolute;
@@ -3136,7 +3136,7 @@ tbody.collapse.show {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #FF5600; }
+  background-color: #D65D28; }
 
 .nav-fill .nav-item {
   -webkit-box-flex: 1;
@@ -3836,8 +3836,8 @@ tbody.collapse.show {
 .page-item.active .page-link {
   z-index: 2;
   color: #fff;
-  background-color: #FF5600;
-  border-color: #FF5600; }
+  background-color: #D65D28;
+  border-color: #D65D28; }
 
 .page-item.disabled .page-link {
   color: #868e96;
@@ -3851,11 +3851,11 @@ tbody.collapse.show {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #FF5600;
+  color: #D65D28;
   background-color: #fff;
   border: 1px solid #ddd; }
   .page-link:focus, .page-link:hover {
-    color: #b33c00;
+    color: #96411c;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #ddd; }
@@ -3910,19 +3910,19 @@ tbody.collapse.show {
 
 .badge-primary {
   color: #fff;
-  background-color: #FF5600; }
+  background-color: #D65D28; }
   .badge-primary[href]:focus, .badge-primary[href]:hover {
     color: #fff;
     text-decoration: none;
-    background-color: #cc4500; }
+    background-color: #ab4a20; }
 
 .badge-secondary {
   color: #111;
-  background-color: #ced4da; }
+  background-color: #D3D3D3; }
   .badge-secondary[href]:focus, .badge-secondary[href]:hover {
     color: #111;
     text-decoration: none;
-    background-color: #b1bbc4; }
+    background-color: #bababa; }
 
 .badge-success {
   color: #fff;
@@ -4007,22 +4007,22 @@ tbody.collapse.show {
   color: inherit; }
 
 .alert-primary {
-  color: #852d00;
-  background-color: #ffddcc;
-  border-color: #ffd0b8; }
+  color: #6f3015;
+  background-color: #f7dfd4;
+  border-color: #f4d2c3; }
   .alert-primary hr {
-    border-top-color: #ffbf9f; }
+    border-top-color: #f0c2ad; }
   .alert-primary .alert-link {
-    color: #521c00; }
+    color: #441d0d; }
 
 .alert-secondary {
-  color: #6b6e71;
-  background-color: #f5f6f8;
-  border-color: #f1f3f5; }
+  color: #6e6e6e;
+  background-color: #f6f6f6;
+  border-color: #f3f3f3; }
   .alert-secondary hr {
-    border-top-color: #e2e6ea; }
+    border-top-color: #e6e6e6; }
   .alert-secondary .alert-link {
-    color: #525557; }
+    color: #555555; }
 
 .alert-success {
   color: #155724;
@@ -4115,7 +4115,7 @@ tbody.collapse.show {
   -ms-flex-pack: center;
   justify-content: center;
   color: #fff;
-  background-color: #FF5600; }
+  background-color: #D65D28; }
 
 .progress-bar-striped {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -4190,8 +4190,8 @@ tbody.collapse.show {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #FF5600;
-    border-color: #FF5600; }
+    background-color: #D65D28;
+    border-color: #D65D28; }
 
 .list-group-flush .list-group-item {
   border-right: 0;
@@ -4205,40 +4205,40 @@ tbody.collapse.show {
   border-bottom: 0; }
 
 .list-group-item-primary {
-  color: #852d00;
-  background-color: #ffd0b8; }
+  color: #6f3015;
+  background-color: #f4d2c3; }
 
 a.list-group-item-primary,
 button.list-group-item-primary {
-  color: #852d00; }
+  color: #6f3015; }
   a.list-group-item-primary:focus, a.list-group-item-primary:hover,
   button.list-group-item-primary:focus,
   button.list-group-item-primary:hover {
-    color: #852d00;
-    background-color: #ffbf9f; }
+    color: #6f3015;
+    background-color: #f0c2ad; }
   a.list-group-item-primary.active,
   button.list-group-item-primary.active {
     color: #fff;
-    background-color: #852d00;
-    border-color: #852d00; }
+    background-color: #6f3015;
+    border-color: #6f3015; }
 
 .list-group-item-secondary {
-  color: #6b6e71;
-  background-color: #f1f3f5; }
+  color: #6e6e6e;
+  background-color: #f3f3f3; }
 
 a.list-group-item-secondary,
 button.list-group-item-secondary {
-  color: #6b6e71; }
+  color: #6e6e6e; }
   a.list-group-item-secondary:focus, a.list-group-item-secondary:hover,
   button.list-group-item-secondary:focus,
   button.list-group-item-secondary:hover {
-    color: #6b6e71;
-    background-color: #e2e6ea; }
+    color: #6e6e6e;
+    background-color: #e6e6e6; }
   a.list-group-item-secondary.active,
   button.list-group-item-secondary.active {
     color: #fff;
-    background-color: #6b6e71;
-    border-color: #6b6e71; }
+    background-color: #6e6e6e;
+    border-color: #6e6e6e; }
 
 .list-group-item-success {
   color: #155724;
@@ -4909,16 +4909,16 @@ button.close {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #FF5600 !important; }
+  background-color: #D65D28 !important; }
 
 a.bg-primary:focus, a.bg-primary:hover {
-  background-color: #cc4500 !important; }
+  background-color: #ab4a20 !important; }
 
 .bg-secondary {
-  background-color: #ced4da !important; }
+  background-color: #D3D3D3 !important; }
 
 a.bg-secondary:focus, a.bg-secondary:hover {
-  background-color: #b1bbc4 !important; }
+  background-color: #bababa !important; }
 
 .bg-success {
   background-color: #28a745 !important; }
@@ -4981,10 +4981,10 @@ a.bg-dark:focus, a.bg-dark:hover {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #FF5600 !important; }
+  border-color: #D65D28 !important; }
 
 .border-secondary {
-  border-color: #ced4da !important; }
+  border-color: #D3D3D3 !important; }
 
 .border-success {
   border-color: #28a745 !important; }
@@ -7123,16 +7123,16 @@ a.bg-dark:focus, a.bg-dark:hover {
   color: #fff !important; }
 
 .text-primary {
-  color: #FF5600 !important; }
+  color: #D65D28 !important; }
 
 a.text-primary:focus, a.text-primary:hover {
-  color: #cc4500 !important; }
+  color: #ab4a20 !important; }
 
 .text-secondary {
-  color: #ced4da !important; }
+  color: #D3D3D3 !important; }
 
 a.text-secondary:focus, a.text-secondary:hover {
-  color: #b1bbc4 !important; }
+  color: #bababa !important; }
 
 .text-success {
   color: #28a745 !important; }
