--- a/website/css/incidents.css
+++ b/website/css/incidents.css
@@ -1,6 +1,6 @@
 #reports_menu{
     overflow: scroll;
-    max-height: 500px;
+    height: 93vh;
 }
 
 
@@ -11,7 +11,8 @@
 }
 
 #col4{
-    margin-top: 3%;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 
