--- a/website/css/incidents.css
+++ b/website/css/incidents.css
@@ -1,14 +1,13 @@
 #reports_menu{
     overflow: scroll;
-    height: 93vh;
+    max-height: 87%;
 }
 
 #col4{
     padding-left: 0;
     padding-right: 0;
+    height: 93vh;
 }
-
-
 #col8{
     margin-top: 20px;
     margin-left: 20px;
@@ -35,4 +34,14 @@
 #date_search_year_box{
 
     margin: auto;
+}
+
+#reports_menu_buttons{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 8px;
+    padding-top: 5px;
 }
