--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,5 +1,5 @@
 #nav_bar{
-    margin-top: 3vh;
+    padding-top: 3vh;
 }
 #dropdown_form{
     width: 250px;
@@ -11,4 +11,63 @@
 }
 #password_input{
     margin-right: 5px;
+
+}
+
+#jumbotron{
+padding-top: 15%;
+}
+
+#bg_div_1{
+    margin: 0;
+    padding: 0;
+
+    height: 95vh;
+
+}
+
+#bg_div_2{
+    margin: 0;
+    padding: 0;
+
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
+#jumbotron2{
+    text-align: right;
+
+
+}
+
+#bg_div_3{
+    margin: 0;
+    padding: 0;
+
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
+#jumbotron3{
+    text-align: left;
+
+}
+
+#bg_div_4{
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-right: 15%;
+    padding-left: 15%;
+    color: #757575;
+}
+#bg_div_5{
+    padding-top: 2%;
+    padding-bottom: 2%;
+    text-align: center;
+
+}
+
+body{
+    background-image: url("../icons/orange-wallpaper-8.jpg");
+    background-attachment: fixed;
 }
