updates to website

--- a/website/bootstrap/assets/scss/_brand.scss
+++ b/website/bootstrap/assets/scss/_brand.scss
@@ -39,7 +39,7 @@
   margin-left: auto;
 }
 
-// Make the icons stand out on what is/isn't okay
+// Make the website_images stand out on what is/isn't okay
 // .bd-brand-item .glyphicon {
 //   width: 30px;
 //   height: 30px;
