--- a/website/css/index.css
+++ b/website/css/index.css
@@ -15,13 +15,13 @@
 }
 
 #jumbotron{
-padding-top: 15%;
+padding-top: 15vh;
 }
 
 #bg_div_1{
     margin: 0;
     padding: 0;
-
+    background: linear-gradient(#D65D28, #FF9B70);
     height: 95vh;
 
 }
@@ -30,8 +30,8 @@ padding-top: 15%;
     margin: 0;
     padding: 0;
 
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
 }
 
 #jumbotron2{
@@ -44,8 +44,9 @@ padding-top: 15%;
     margin: 0;
     padding: 0;
 
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    background: linear-gradient(#D65D28, #FF9B70);
 }
 
 #jumbotron3{
@@ -54,20 +55,20 @@ padding-top: 15%;
 }
 
 #bg_div_4{
-    padding-top: 10%;
-    padding-bottom: 10%;
-    padding-right: 15%;
-    padding-left: 15%;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-right: 15vh;
+    padding-left: 15vh;
     color: #757575;
 }
 #bg_div_5{
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
     text-align: center;
 
 }
 
-body{
-    background-image: url("../icons/orange-wallpaper-8.jpg");
-    background-attachment: fixed;
+.container_custom{
+    width: 80vw;
+    margin: auto;
 }
