--- a/website/css/index.css
+++ b/website/css/index.css
@@ -15,13 +15,14 @@
 }
 
 #jumbotron{
-padding-top: 15vh;
+padding-top: 20vh;
 }
 
 #bg_div_1{
     margin: 0;
     padding: 0;
-    background: linear-gradient(#D65D28, #FF9B70);
+    background-image: url("../website_images/9d9ecfb0.png");
+    background-attachment: fixed;
     height: 95vh;
 
 }
@@ -30,8 +31,8 @@ padding-top: 15vh;
     margin: 0;
     padding: 0;
 
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding-top: 20vh;
+    padding-bottom: 20vh;
 }
 
 #jumbotron2{
@@ -43,10 +44,11 @@ padding-top: 15vh;
 #bg_div_3{
     margin: 0;
     padding: 0;
+    background-image: url("../website_images/9d9ecfb0.png");
+    background-attachment: fixed;
+    padding-top: 20vh;
+    padding-bottom: 20vh;
 
-    padding-top: 10vh;
-    padding-bottom: 10vh;
-    background: linear-gradient(#D65D28, #FF9B70);
 }
 
 #jumbotron3{
@@ -55,15 +57,15 @@ padding-top: 15vh;
 }
 
 #bg_div_4{
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding-top: 20vh;
+    padding-bottom: 20vh;
     padding-right: 15vh;
     padding-left: 15vh;
     color: #757575;
 }
 #bg_div_5{
-    padding-top: 2vh;
-    padding-bottom: 2vh;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     text-align: center;
 
 }
@@ -71,4 +73,8 @@ padding-top: 15vh;
 .container_custom{
     width: 80vw;
     margin: auto;
+}
+
+body{
+
 }
