--- a/website/bootstrap/scss/_variables.scss
+++ b/website/bootstrap/scss/_variables.scss
@@ -63,7 +63,7 @@ $colors: map-merge((
   "gray-dark":  $gray-800
 ), $colors);
 
-$primary:       #D65D28;
+$primary:       #1786DD;
 $secondary:     #D3D3D3;
 $success:       $green !default;
 $info:          $cyan !default;
