--- a/website/bootstrap/assets/css/docs.css
+++ b/website/bootstrap/assets/css/docs.css
@@ -144,7 +144,6 @@
 
 .bd-content {
   -webkit-box-ordinal-group: 2;
-  -webkit-order: 1;
   -ms-flex-order: 1;
   order: 1; }
   .bd-content > h2[id],
@@ -284,7 +283,6 @@
 
 .bd-toc {
   -webkit-box-ordinal-group: 3;
-  -webkit-order: 2;
   -ms-flex-order: 2;
   order: 2;
   padding-top: 1.5rem;
@@ -318,7 +316,6 @@
 
 .bd-sidebar {
   -webkit-box-ordinal-group: 1;
-  -webkit-order: 0;
   -ms-flex-order: 0;
   order: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
@@ -413,7 +410,7 @@
     font-weight: 500;
     color: #495057; }
     .bd-footer a:hover, .bd-footer a:focus {
-      color: #D65D28; }
+      color: #1786DD; }
   .bd-footer p {
     margin-bottom: 0; }
   @media (min-width: 576px) {
@@ -462,10 +459,8 @@
 
 .example-row {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -15px;
@@ -480,14 +475,12 @@
   @media (min-width: 576px) {
     .example-content-main {
       -webkit-box-flex: 0;
-      -webkit-flex: 0 0 50%;
       -ms-flex: 0 0 50%;
       flex: 0 0 50%;
       max-width: 50%; } }
   @media (min-width: 992px) {
     .example-content-main {
       -webkit-box-flex: 0;
-      -webkit-flex: 0 0 66.66667%;
       -ms-flex: 0 0 66.66667%;
       flex: 0 0 66.66667%;
       max-width: 66.66667%; } }
@@ -501,14 +494,12 @@
   @media (min-width: 576px) {
     .example-content-secondary {
       -webkit-box-flex: 0;
-      -webkit-flex: 0 0 50%;
       -ms-flex: 0 0 50%;
       flex: 0 0 50%;
       max-width: 50%; } }
   @media (min-width: 992px) {
     .example-content-secondary {
       -webkit-box-flex: 0;
-      -webkit-flex: 0 0 33.33333%;
       -ms-flex: 0 0 33.33333%;
       flex: 0 0 33.33333%;
       max-width: 33.33333%; } }
@@ -997,7 +988,7 @@
 
 .swatch-primary {
   color: #fff;
-  background-color: #D65D28; }
+  background-color: #1786DD; }
 
 .swatch-secondary {
   color: #111;
@@ -1295,18 +1286,17 @@
 
 .anchorjs-link {
   font-weight: 400;
-  color: rgba(214, 93, 40, 0.5);
+  color: rgba(23, 134, 221, 0.5);
   -webkit-transition: color .16s linear;
   -o-transition: color .16s linear;
   transition: color .16s linear; }
   .anchorjs-link:hover {
-    color: #D65D28;
+    color: #1786DD;
     text-decoration: none; }
 
 .algolia-autocomplete {
   display: block !important;
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1; }
   .algolia-autocomplete .ds-dropdown-menu {
